syntax = "proto3";
import "simulation/io/proto/types/general.proto";

package population;

message Header {
  uint32 version = 1;
  uint32 size = 2;
}

message Person {
  string id = 1;
  repeated Plan plan = 2;
  map<string, general.AttributeValue> attributes = 3;
}

message Plan {
  bool selected = 1;
  repeated Leg legs = 2;
  repeated Activity acts = 3;
}

message Activity {
  string act_type = 1;
  string link_id = 2;
  double x = 3;
  double y = 4;
  optional uint32 start_time = 5;
  optional uint32 end_time = 6;
  optional uint32 max_dur = 7;
}

message Leg {
  string mode = 1;
  optional string routing_mode = 2;
  optional uint32 dep_time = 3;
  optional uint32 trav_time = 4;
  map<string, general.AttributeValue> attributes = 6;
  oneof route {
    GenericRoute generic_route = 7;
    NetworkRoute network_route = 8;
    PtRoute pt_route = 9;
  };
}

message GenericRoute {
  string start_link = 1;
  string end_link = 2;
  optional uint32 trav_time = 3;
  optional double distance = 4;
  optional string veh_id = 5;
}

message NetworkRoute {
  GenericRoute delegate = 1;
  repeated string route = 2;
}

message PtRoute {
  GenericRoute delegate = 1;
  PtRouteDescription information = 2;
}

message PtRouteDescription {
  string transit_route_id = 1;
  optional uint32 boarding_time = 2;
  string transit_line_id = 3;
  string access_facility_id = 4;
  string egress_facility_id = 5;
}
