syntax = "proto3";
package routing;

import "simulation/io/proto/types/population.proto";

service RoutingService {
  rpc GetRoute (Request) returns (Response);
}

message Request {
  string person_id = 1;
  string from_link_id = 2;
  string to_link_id = 3;
  string mode = 4;
  uint32 departure_time = 5;
}

message Response {
  repeated population.Leg legs = 1;
  repeated population.Activity activities = 2;
}